--- a/package.json
+++ b/package.json
@@ -6,14 +6,26 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
     "jszip": "^3.10.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@google/genai": "^1.34.0",
+    "dotenv": "^17.2.3",
+    "groq-sdk": "^0.37.0",
+    "cors": "^2.8.5",
+    "express": "^5.2.1",
+    "sqlite3": "^5.1.7",
+    "qrcode": "^1.5.4",
+    "uuid": "^13.0.0",
+    "multer": "^2.0.2",
+    "whatsapp-web.js": "^1.23.0",
+    "puppeteer": "^22.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
