--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "uuid": "^13.0.0",
     "multer": "^2.0.2",
     "whatsapp-web.js": "^1.26.0",
-    "puppeteer-core": "^22.0.0"
+    "puppeteer-core": "^22.0.0",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -35,7 +36,8 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@types/nodemailer": "^6.4.14"
   },
   "engines": {
     "node": ">=18.0.0"
