--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "uuid": "^13.0.0",
     "multer": "^2.0.2",
     "whatsapp-web.js": "^1.26.0",
-    "puppeteer-core": "^22.0.0"
+    "puppeteer-core": "^22.0.0",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
