--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "multer": "^2.0.2",
     "whatsapp-web.js": "^1.26.0",
     "puppeteer-core": "^22.0.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "pdfjs-dist": "^3.11.174"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
