--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "contabil-manager-pro",
   "private": true,
@@ -24,7 +25,7 @@
     "qrcode": "^1.5.4",
     "uuid": "^13.0.0",
     "multer": "^2.0.2",
-    "whatsapp-web.js": "^1.26.0",
+    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
     "puppeteer-core": "^22.0.0",
     "nodemailer": "^6.9.13",
     "pdfjs-dist": "^3.11.174"
