--- a/package.json
+++ b/package.json
@@ -27,9 +27,7 @@
     "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#main",
     "puppeteer-core": "^22.0.0",
     "nodemailer": "^6.9.13",
-    "pdfjs-dist": "^3.11.174",
-    "imap-simple": "^5.1.0",
-    "mailparser": "^3.6.9"
+    "pdfjs-dist": "^3.11.174"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
